VisualGDB/Debug/synth_rtos.log
  main.cpp
main.cpp(37,33): error :  array bound is not an integer constant before ']' token
    static float buffer[buffer_size];
                                   ^
